Kubernetes/cert-manager-example/terraform/vpc.tf
module "vpc" {
  source               = "terraform-aws-modules/vpc/aws"
  version              = "2.47.0"
  name                 = var.vpc_name
  cidr                 = "192.168.0.0/16"
  azs                  = data.aws_availability_zones.available.names
  private_subnets      = ["192.168.1.0/24", "192.168.2.0/24", "192.168.3.0/24"]
  public_subnets       = ["192.168.4.0/24", "192.168.5.0/24", "192.168.6.0/24"]
  enable_nat_gateway   = true
  single_nat_gateway   = true
  enable_dns_hostnames = true

  public_subnet_tags = {
    "kubernetes.io/cluster/${var.cluster_name}" = "shared"
    "kubernetes.io/role/elb"                    = "1"
  }

  private_subnet_tags = {
    "kubernetes.io/cluster/${var.cluster_name}" = "shared"
    "kubernetes.io/role/internal-elb"           = "1"
  }
}
//
//resource "aws_security_group" "worker_group_mgmt_one" {
//  name_prefix = "worker_group_mgmt_one"
//  vpc_id      = module.vpc.vpc_id
//
//  ingress {
//    from_port = 22
//    to_port   = 22
//    protocol  = "tcp"
//
//    cidr_blocks = [
//      "192.168.0.0/8",
//    ]
//  }
//}
//
//resource "aws_security_group" "worker_group_mgmt_two" {
//  name_prefix = "worker_group_mgmt_two"
//  vpc_id      = module.vpc.vpc_id
//
//  ingress {
//    from_port = 22
//    to_port   = 22
//    protocol  = "tcp"
//
//    cidr_blocks = [
//      "192.168.0.0/16",
//    ]
//  }
//}
//
//resource "aws_security_group" "all_worker_mgmt" {
//  name_prefix = "all_worker_management"
//  vpc_id      = module.vpc.vpc_id
//
//  ingress {
//    from_port = 22
//    to_port   = 22
//    protocol  = "tcp"
//
//    cidr_blocks = [
//      "10.0.0.0/8",
//      "172.16.0.0/12",
//      "192.168.0.0/16",
//    ]
//  }
//}
